Refresh of UI/UX
This update adds feedback in the form of font color of the cadence
data. Extends the tolerance to +/- 5 steps per minute. Removes the
settings and companion app in favor of on device button presses to
modify the target cadence. Updates the wipe color.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -4,12 +4,22 @@
   text-anchor: middle;
   text-length: 32;
   font-size: 50;
+  font-weight: bold;
 }
 
 .sensor-data {
-  font-family: System-Light;
-  fill: red;
+  font-family: System-Regular;
+  fill: #02AFD0;
   text-anchor: middle;
   text-length: 32;
-  font-size: 60;
+  font-size: 150;
+}
+
+#target-cadence-data {
+  font-size: 32;
+  font-weight: light;
+}
+
+#target-cadence-label {
+  font-size: 30;
 }
